hotel provider created

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>Prediction-Provider</module>
         <module>DataLake-Builder</module>
+        <module>Hotel-Provider</module>
     </modules>
 
     <properties>
